# pyvma2

./: build_vma.bat  build_vma_lib.py  pyproject.toml  setup.py
src/pyvma2/: __init__.py  _build_ffi.py  _vma.pyd
src/pyvma2.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/pyvma2/cdef/: vma.cdef.h
tests/: test_smoke.py
