[build-system]
requires = ["setuptools>=68", "cffi>=1.16"]
build-backend = "setuptools.build_meta"

[project]
name = "pyvma2"
version = "3.4.0"
description = "Modern Python CFFI wrapper for Vulkan Memory Allocator 3.x"
requires-python = ">=3.10"
license = "Apache-2.0"
dependencies = ["cffi>=1.16"]

[tool.setuptools.packages.find]
where = ["src"]
